# TI_Gruppenarbeit-1

./: CMakeLists.txt  CompileWithGcc.sh  README.md  main.c
GCC_Executables/: 2.1sortAndSearch  2.2sortAndSearchSTDLIB  2.3sortAndSearchBenchmark
implementations/: 1.1implementation.c  1.2_benchmark.c  1.2benchmark.c  1.3comparison.c  1.4linkedLists.c  2.1sortAndSearch.c  2.2sortAndSearchSTDLIB.c  2.3SortAndSearchBenchmark.c
include/: allfunclib.h  incudeInfo.txt
src/: _genFunc.c  bubblesort.c  insertionsort.c  insertionsort_2.c  mergesort.c  mergesort2.c  quicksort.c  randnum.c
src/implementations/: 1.1implementation.c
srcGeneral/: _genFunc.c  bubblesort.c  mergesort.c  quicksort.c  randnum.c
src_2.x_Specific/: binarySearchAlgorithm.c  binarySearchAlgorithm.h  generateRandomStruct.c  generateRandomStruct.h  quicksortInt.c  quicksortInt.h  quicksortString.c  quicksortString.h  sortStruckt.c  sortStruckt.h  spielplatz_mark.c  spielplatz_mark.h  userInputSearch.c  userInputSearch.h
